fix mobile version and translate on russion

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Info Box -->
     <div class="info_box">
-        <div class="info-title"><span>Some Rules of this Quiz</span></div>
+        <div class="info-title"><span>Правила прохождения теста</span></div>
         <div class="info-list">
             <div class="info">1. На каждый вопрос у вас будет всего <span>15 секунд</span>.</div>
             <div class="info">2. После того как вы выберете ответ, его нельзя будет отменить.</div>
@@ -33,9 +33,9 @@
     <!-- Quiz Box -->
     <div class="quiz_box">
         <header>
-            <div class="title">Название викторины</div>
+            <div class="title">Основа сотовой сети</div>
             <div class="timer">
-                <div class="time_left_txt">Осталось:</div>
+                <div class="time_left_txt"></div>
                 <div class="timer_sec">15</div>
             </div>
             <div class="time_line"></div>
