--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <div class="buttons">
             <button class="restart">Повторить</button>
-            <button class="quit">Закрыть</button>
+            <button class="quit close_button">Закрыть</button>
         </div>
     </div>
 
